05-demo/deploy/app/overlays/preview/transaction-api-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api-preview
  namespace: belo
  labels:
    app.kubernetes.io/name: transaction-api-preview
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: belo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: transaction-api-preview
  ports:
    - name: http
      port: 3000
      targetPort: http
