05-demo/deploy/app/overlays/preview/transaction-api-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: transaction-api
  namespace: belo
  labels:
    app.kubernetes.io/name: transaction-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: belo
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
